# SeldonSandbox

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pyproject.toml
docs/: Characteristics - experiential.docx  ChatGPT Modeling of A Society.docx  Claude Conversation about modeling the society.docx  Gemini Conversation about Modeling a Society.docx  Seldon Sandbox Claude Code Start.docx  seldon_sandbox_handoff.md  seldon_sandbox_handoff_v2.md  seldon_sandbox_v2.3_architecture.md  seldon_sandbox_v3.0_architecture.md
examples/: run_baseline.py  run_phase2_demo.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/hooks/: useSimulation.ts
frontend/src/lib/: constants.ts
frontend/src/stores/: playback.ts  simulation.ts
src/seldon/: __init__.py
tests/: conftest.py  test_api.py  test_api_advanced.py  test_archetypes.py  test_attraction.py  test_beliefs.py  test_collector.py  test_community.py  test_config.py  test_council.py  test_decision.py  test_drift.py  test_economics.py  test_engine.py  test_environment.py  test_extensions.py  test_fertility.py  test_genetics.py  test_genetics_api.py  test_hex_grid.py  test_inheritance.py  test_inner_life.py  test_llm.py  test_lore.py  test_needs.py  test_outsider.py  test_persistence.py  test_phase_d_social.py  test_presets.py  test_processing.py  test_relationships.py  test_runner.py  test_social_dynamics.py  test_tick_engine.py  test_tick_world.py  test_traits.py
(+120 files in other folders)
